<resources>
    <string name="app_name">Inventory</string>
    <string name="product_name">Name</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_price">Price</string>
    <string name="product_units">units</string>
    <string name="product_coin">$</string>
    <string name="product_photo">Photo</string>
    <string name="select_select_photo">Select photo</string>
    <string name="select_add_product">+ Add product</string>
    <string name="add_new_product">Add a new product</string>
    <string name="buy_product">Sale</string>
    <string name="remove_product">Remove</string>
    <string name="order_from_supplier">Order from supplier</string>
    <string name="product_quantity_increment">Increment</string>
    <string name="product_deleted">The product has been deleted</string>

    <string name="emptyList">For add new products to the database please click on "+" button</string>

    <string name="delete_dialog_title">Important!</string>
    <string name="delete_dialog_text">Are you sure?</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>


    <string name="send_mail_chooser">Send mail</string>
    <string name="send_mail_subject">Request order</string>
    <string name="send_mail_body">Request order for the following product:</string>


    <string name="error_loading_image">Error loading image</string>
    <string name="error_saving_product">Error saving product</string>
    <string name="error_product_incomplete">You must complete all filed</string>
    <string name="error_buying_product">Error buying product</string>
    <string name="error_form_not_complete">You must complete all fields</string>
</resources>